# UAV_basler_stereopair_driver

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: F.yaml  camera_poses.yaml  camera_positions.yaml  general.yaml
config/camera_calibrations/: basler_left.yaml  basler_right.yaml
include/: BaslerStereoDriver.h  Utils.h
launch/: basler_stereopair_driver.launch  camera_to_apriltag.launch  static_publisher.launch
msg/: ImageMultiview.msg
rviz/: calibration.rviz  config.rviz
scripts/: cameras_calibration.sh  change_uav.sh  pair_calibration_node.py
src/: BaslerStereoDriver.cpp  Utils.cpp
tmux_scripts/: .tmuxinator.yml  calibration_session.yml  complete_calibration.sh  session.yml  single_calib_session.yml  single_camera_calibration.sh  start_calibration.sh  stereo_calib_session.yml  stereopair_calibration.sh
